# model/summary.go
@@ -1,7 +1,8 @@
 package model
 
 type Summary struct {
-	CustomerId          string  `json:"customerId"`
-	NbrOfPurchasedItems uint    `json:"nbrOfPurchasedItems"`
-	TotalAmountEur      float64 `json:"totalAmountEur"`
+	CustomerId          string  `json:"customerId" binding:"required"`
+	NbrOfPurchasedItems int     `json:"nbrOfPurchasedItems" binding:"required"`
+	TotalAmountEur      float64 `json:"totalAmountEur" binding:"required"`
+	Items               []Item  `json:"items" binding:"required,dive"`
 }
